--- a/server/Test/mainpage.ejs
+++ b/server/Test/mainpage.ejs
@@ -13,11 +13,14 @@
    </head>
    <body>
       <h1>로그인 영역</h1>
-      <div></div>
+      <div>로그인해주세요</div>
+      <div>로그인 하러가기</div>
       <h1>공지 영역</h1>
       <div>공지입니다(프론트)</div>
       <h1>굿즈 영역</h1>
-      <div></div>
+      <div><%=data1%></div>
+      <div><%=data2%></div>
+      <div><%=data3%></div>
       <h1>광고 영역</h1>
       <div>광고입니다(프론트)</div>
    </body>
